fix: fit tiers on mobile

--- a/src/containers/auctionLandingPage/AuctionLandingPage.scss
+++ b/src/containers/auctionLandingPage/AuctionLandingPage.scss
@@ -1253,6 +1253,19 @@
                   object-fit: cover;
                   border-radius: 12px;
                 }
+                @include sm {
+                  &:nth-child(2) {
+                    margin-left: 0;
+                    margin-top: 20px;
+                  }
+                  &:nth-child(3) {
+                    margin-left: 0;
+                    margin-top: 20px;
+                  }
+                }
+              }
+              @include sm {
+                flex-direction: column;
               }
               .preview-video {
                 width: 100%;
